<resources>
    <string name="app_name">PST4</string>
    <string name="signIn_user_text">UserName</string>
    <string name="signIn_password_text">PassWord</string>
    <string name="signIn_connect">Connect</string>
    <string name="signIn_forgot_password">Forgotten password ?</string>
    <string name="connect_sign_in_button">Sign In</string>
    <string name="connect_sign_up_button">Sign Up</string>
    <string name="annee_de_fabrication">Année de fabrication</string>
    <string name="mise_en_circulation">1ère mise en circulation</string>
    <string name="immatriculation">Plaque d\'immatriculation</string>
    <string name="first_hand">1ère main</string>
    <string name="kilometrage">Kilométrage</string>
    <string name="couleur">Couleur</string>
    <string name="nombres_de_portes">Nombres de portes</string>
    <string name="type_de_coffre">Type de coffre</string>
    <string name="option">Option</string>
    <string name="appareil_photo">Appareil Photo</string>
    <string name="galerie">Galerie</string>
    <string name="photo_voiture">Ajouter une photo de votre voiture</string>
    <string name="numero_plaque">Numéro de plaque</string>
    <string name="nombre_kilometre">Kilométrage</string>
    <string-array name="spinner_marque">
        <item>Renault</item>
        <item>Peugeot</item>
        <item>Citroën</item>
        <item>DS</item>
    </string-array>
    <string-array name="spinner_modele">
        <item>Clio</item>
        <item>Zoé</item>
        <item>Mégane</item>
        <item>Scénique</item>
        <item>206</item>
        <item>207</item>
        <item>208</item>
        <item>508</item>
        <item>C3</item>
        <item>DS7 crossback</item>
    </string-array>
    <string-array name="spinner_version">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="neuf">NEUF</string>
    <string name="occasion">Occasion</string>
    <string name="publication_d_un_nouveau_v_hicule">Publication_d_un_nouveau_v_hicule</string>
    <string name="titre">Votre véhicule est :</string>
    <string name="suivant">Suivant</string>
    <string name="retour">Retour</string>
    <string name="etat">Etat :</string>
</resources>
