<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvertActivity1">

    <TextView
        android:id="@+id/text1"
        android:layout_width="350dp"
        android:layout_height="24dp"
        android:text="@string/publication_d_un_nouveau_v_hicule"
        android:textAlignment="center" />

    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/suiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suivant"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonOccasion"
        android:layout_width="210dp"
        android:layout_height="204dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="121dp"
        android:text="@string/occasion" />

    <Button
        android:id="@+id/buttonNeuf"
        android:layout_width="210dp"
        android:layout_height="204dp"
        android:layout_above="@+id/buttonOccasion"
        android:layout_below="@+id/text1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="52dp"
        android:text="@string/neuf" />

</RelativeLayout>