<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yearcraft"
        android:text="@string/annee_de_fabrication"
        android:textSize="20sp"
        android:layout_marginTop="20mm"
        />
    <Spinner
        android:id="@+id/spinner_yearcraft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/yearcraft"
        android:layout_toEndOf="@+id/yearcraft"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_circulation"
        android:text="@string/mise_en_circulation"
        android:textSize="20sp"
        android:layout_below="@+id/yearcraft"
        android:layout_marginTop="30dp"
        />
    <Spinner
        android:id="@+id/spinner_mise_circulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/first_circulation"
        android:layout_toEndOf="@+id/first_circulation"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/immatriculation"
        android:text="@string/immatriculation"
        android:textSize="20dp"
        android:layout_below="@+id/first_circulation"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textfield_immatriculation"
        android:inputType="number"
        android:layout_below="@+id/immatriculation"
        android:layout_marginTop="40dp"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_first_hand"
        android:text="@string/first_hand"
        android:textSize="20dp"
        android:textOff="OFF"
        android:textOn="ON"
        android:layout_below="@+id/textfield_immatriculation"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kilometrage"
        android:text="@string/kilometrage"
        android:textSize="32dp"
        android:layout_below="@+id/switch_first_hand"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textfield_kilometrage"
        android:inputType="number"
        android:layout_below="@+id/kilometrage"
        />

    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/suiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suivant"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
