<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Titre"
        android:text="@string/photo_voiture"
        android:layout_marginTop="30mm"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="20mm"
        android:layout_height="20mm"
        android:id="@+id/appareil_photo"
        android:text="@string/appareil_photo"
        android:layout_centerInParent="true"/>
    <Button
        android:layout_width="20mm"
        android:layout_height="20mm"
        android:id="@+id/galery"
        android:text="@string/galerie"
        android:layout_toRightOf="@+id/appareil_photo"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/suiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="298dp"
        android:layout_marginTop="645dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="38dp"
        android:text="@string/suivant" />

   <!-- <Button
        android:id="@+id/retour"
        android:text="@string/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="643dp"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="40dp" />-->


</RelativeLayout>