<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <Button
        android:id="@+id/returnButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/connect_image_margin"
        android:layout_marginBottom="@dimen/connect_image_margin"
        tools:srcCompat="@tools:sample/avatars[3]"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/UserNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn_user_text"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn_password_text"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/connect_button_margin"
        android:layout_marginBottom="@dimen/connect_button_margin"
        android:text="@string/signIn_connect"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/forgottenPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/connect_button_margin"
        android:layout_marginBottom="@dimen/connect_button_margin"
        android:text="@string/signIn_forgot_password"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>